# ProjectMeats3

./: .gitignore  .pre-commit-config.yaml  ALLOWED_HOSTS_FIX.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_OPTIMIZATION_SUMMARY.md  LICENSE  Makefile  QUICK_SETUP.md  README.md  USER_DEPLOYMENT_GUIDE.md  app.yaml  docker-compose.yml  health_check.py  production_checklist.md  pyproject.toml  setup.py  setup_env.py  simulate_deployment.py  test_deployment.py
.github/: copilot-instructions.md
.github/workflows/: ci-cd.yml
backend/: .env.env.backup  .env.example  .env.production.example  Dockerfile  build_temp.db  manage.py  requirements.txt  test.db  test_allowed_hosts_fix.py
backend/apps/: __init__.py
backend/apps/accounts_receivables/: models.py
backend/apps/ai_assistant/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/carriers/: models.py
backend/apps/contacts/: models.py
backend/apps/core/: models.py  serializers.py  urls.py  views.py
backend/apps/customers/: models.py
backend/apps/licensing/: apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/plants/: models.py
backend/apps/purchase_orders/: models.py
backend/apps/suppliers/: models.py
backend/projectmeats/: asgi.py  health.py  settings_original_backup.py  urls.py  wsgi.py
backend/projectmeats/settings/: __init__.py  base.py  development.py  production.py  staging.py
backend/static/: .gitkeep
config/: BEST_PRACTICES.md  README.md  manage_env.py
config/deployment/: docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.staging.yml
config/environments/: development.env  staging.env
config/shared/: backend.env.template
docs/: DEPLOYMENT_GUIDE.md  ENVIRONMENT_GUIDE.md  SAAS_FEATURES.md
docs/legacy/: DEPLOYMENT_GUIDE.md  README.md  production_checklist.md
frontend/: .env.env.local.backup  .env.example  .env.production.example  Dockerfile  nginx.conf  package-lock.json  package.json
frontend/public/: index.html  manifest.json  sw.js
frontend/src/: App.tsx  index.css
frontend/src/services/: aiService.ts
frontend/src/tests/: App.test.tsx  setupTests.ts
frontend/src/types/: index.ts
infrastructure/: README.md
infrastructure/environments/dev/: dev.tfvars  main.tf
infrastructure/environments/prod/: main.tf  prod.tfvars
(+32 files in other folders)
